--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "classnames": "^2.3.2",
+    "lodash": "^4.17.21",
     "microcms-js-sdk": "^2.3.2",
     "next": "13.1.6",
     "react": "18.2.0",
@@ -22,6 +23,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "eslint": "^8.34.0",
     "eslint-config-next": "^13.1.6",
     "eslint-config-prettier": "^8.6.0",
